--- a/index.html
+++ b/index.html
@@ -1,1 +1,14 @@
-a
+<!DOCTYPE html>
+<html lang="en">
+    <head>
+        <meta charset="utf-8">
+        <Title>Computing's Positive Contributions</Title>
+
+    </head>
+    <body>
+        <h1>Computing's for Positive Contributions</h1>
+        <p>
+            
+        </p>
+    </body>
+</html>
