--- a/index.html
+++ b/index.html
@@ -7,8 +7,15 @@
     </head>
     <body>
         <h1>Computing's for Positive Contributions</h1>
-        <p>
-            
+        <p>Throughout the history of computing the objective has to enhance the processes that enables for efficentcies. These include time, accuracy
+            and replication. As time has gone the techniques and capabilities of computing has influenced every sector in society. Sometimes for the 
+            betterment of others. Some of the ways in which computers have made a positive contribution are:
         </p>
+        <ul>
+            <li>Healthcare</li>
+            <li>People with Disabilities</li>
+            <li>Climate, Enviorment and Natural Disaster</li>
+            <li>As well as many more</li>
+        </ul>
     </body>
 </html>
