--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
             betterment of others. Some of the ways in which computers have made a positive contribution are:
         </p>
         <ul>
-            <li>Healthcare</li>
+            <li><a href="Healthcare.html">Healthcare</a></li>
             <li>People with Disabilities</li>
             <li>Climate, Enviorment and Natural Disaster</li>
             <li>As well as many more</li>
