Headings for pages (h1, h2 and h3)

--- a/Disabilities.html
+++ b/Disabilities.html
@@ -1,1 +1,20 @@
 <!DOCTYPE html>
+<html lang="en">
+    <head>
+        <meta charset="utf-8">
+        <title>People with Disabilities and Health Conditions</title>
+    </head>
+
+    <body>
+        <h1>People with Disabilities and Health Conditions</h1>
+
+        <h2>Blind</h2>
+        <h2>Deaf</h2>
+        <h2>SpLD's, Autism and Learning Disabilities</h2>
+        <h2>Health Conditions</h2>
+        <h3>Glucose Detection</h3>
+        <h3>Pacemakers</h3>
+        
+    </body>
+
+</html>
