adding hyperlinks to list

--- a/index.html
+++ b/index.html
@@ -13,8 +13,8 @@
         </p>
         <ul>
             <li><a href="Healthcare.html">Healthcare</a></li>
-            <li>People with Disabilities</li>
-            <li>Climate, Enviorment and Natural Disaster</li>
+            <li><a href="Disabilities.html">People with Disabilities</a></li>
+            <li><a href="Enviroment.html">Climate, Enviorment and Natural Disaster</a></li>
             <li>As well as many more</li>
         </ul>
     </body>
