pacemaker and diabeties images added

--- a/Disabilities.html
+++ b/Disabilities.html
@@ -13,8 +13,10 @@
         <h2>SpLD's, Autism and Learning Disabilities</h2>
         <h2>Health Conditions</h2>
         <h3>Glucose Detection</h3>
+        <img src="Images/diabeties mangement.jpg" alt="image of diabeties management devices">
         <h3>Pacemakers</h3>
-        
+        <img src="Images/Pacemaker.jpg" alt="Depiction of the human heart with a pacemaker in place">
+
     </body>
 
 </html>
