--- a/index.html
+++ b/index.html
@@ -17,5 +17,11 @@
             <li><a href="Enviroment.html">Climate, Enviorment and Natural Disaster</a></li>
             <li>As well as many more</li>
         </ul>
+
+        <button onclick="alert('sing me a song');"> clickme</button>
+
+
+
+
     </body>
 </html>
